--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -86,14 +86,17 @@
 
     <Button
         android:id="@+id/id_btn_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="256dp"
+        android:layout_width="112dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:drawableStart="@drawable/ic_clock_outline"
+        android:padding="8dp"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:drawableRight="@drawable/ic_clock_outline"/>
+        app:layout_constraintTop_toBottomOf="@+id/id_tv_time" />
         <!--android:contentDescription="TODO" />-->
 
     <Button
@@ -107,16 +110,17 @@
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/id_tv_time" />
+        app:layout_constraintTop_toBottomOf="@+id/id_btn_time" />
 
     <TextView
         android:id="@+id/id_tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="240dp"
         android:text="@string/lbl_time"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         app:layout_constraintEnd_toEndOf="@+id/id_btn_time"
         app:layout_constraintStart_toStartOf="@+id/id_btn_time"
-        app:layout_constraintTop_toBottomOf="@+id/id_btn_time" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
