--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
+<androidx.appcompat.widget.ActionBarContainer
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/id_toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?attr/actionBarSize"
-    android:background="?attr/colorPrimary"
-    android:theme="?attr/actionBarTheme">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+    <!--android:theme="@style/AppTheme.AppBarOverlay">-->
 
-    <!--<TextView-->
-        <!--android:id="@+id/id_toolbar_count"-->
-        <!--style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="end"-->
-        <!--android:layout_marginEnd="8dp" />-->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/id_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="?attr/actionBarTheme" />
 
-</androidx.appcompat.widget.Toolbar>
+</androidx.appcompat.widget.ActionBarContainer>
