--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -2,10 +2,12 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/id_settings_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <!--android:layout_marginTop="112dp">-->
+    android:layout_height="match_parent"
+    tools:context=".ui.fragment.SettingsFragment">
+    <!--android:layout_marginTop="56dp">-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 <!-- Notes:
