--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -27,12 +27,12 @@
             android:id="@+id/editFragment_to_mainFragment"
             app:destination="@id/id_main_fragment" />
     </fragment>
-    <fragment
-        android:id="@+id/id_settings_fragment"
-        android:name="mcssoft.com.racereminderac.ui.fragment.SettingsFragment"
-        android:label="Settings">
-        <action
-            android:id="@+id/settingsFragment_to_mainFragment"
-            app:destination="@id/id_main_fragment" />
-    </fragment>
+    <!--<fragment-->
+        <!--android:id="@+id/id_settings_fragment"-->
+        <!--android:name="mcssoft.com.racereminderac.ui.fragment.SettingsFragment"-->
+        <!--android:label="Settings">-->
+        <!--<action-->
+            <!--android:id="@+id/settingsFragment_to_mainFragment"-->
+            <!--app:destination="@id/id_main_fragment" />-->
+    <!--</fragment>-->
 </navigation>
