--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<preference-header
+<preference-headers
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-</preference-header>
+</preference-headers>
 
 <!--<preference-headers-->
 <!--xmlns:android="http://schemas.android.com/apk/res/android">-->
