--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -2,30 +2,26 @@
 <preference-headers
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <header
+        android:title="Defaults"
+        android:summary="Set default preferences."
+        android:fragment="mcssoft.com.racereminderac.ui.fragment.settings.DefaultsFragment" />
+
+    <header
+        android:title="Notifications"
+        android:summary="Set notification preferences."
+        android:fragment="mcssoft.com.racereminderac.ui.fragment.settings.NotificationFragment" />
+
+    <header
+        android:title="Refresh"
+        android:summary="Set refresh preferences."
+        android:fragment="mcssoft.com.racereminderac.ui.fragment.settings.RefreshFragment" />
+
+    <header
+        android:title="Maintenance"
+        android:summary="Set maintenace preferences."
+        android:fragment="mcssoft.com.racereminderac.ui.fragment.settings.MaintenanceFragment" />
+
 </preference-headers>
+<!-- TODO android:icon="@drawable/set_icons_for_headers"-->
 
-<!--<preference-headers-->
-<!--xmlns:android="http://schemas.android.com/apk/res/android">-->
-
-<!--<header android:fragment="com.example.android.apis.preference.PreferenceWithHeaders$Prefs1Fragment"-->
-    <!--android:icon="@drawable/ic_settings_applications"-->
-    <!--android:title="Prefs 1"-->
-    <!--android:summary="An example of some preferences." />-->
-
-<!--<header android:fragment="com.example.android.apis.preference.PreferenceWithHeaders$Prefs2Fragment"-->
-    <!--android:icon="@drawable/ic_settings_display"-->
-    <!--android:title="Prefs 2"-->
-    <!--android:summary="Some other preferences you can see.">-->
-    <!--&lt;!&ndash; Arbitrary key/value pairs can be included with a header as-->
-    <!--arguments to its fragment. &ndash;&gt;-->
-    <!--<extra android:name="someKey" android:value="someHeaderValue" />-->
-<!--</header>-->
-
-<!--<header android:icon="@drawable/ic_settings_display"-->
-    <!--android:title="Intent"-->
-    <!--android:summary="Launches an Intent.">-->
-    <!--<intent android:action="android.intent.action.VIEW"-->
-        <!--android:data="http://www.android.com" />-->
-<!--</header>-->
-
-<!--</preference-headers>-->
