--- a/app/src/main/res/layout/edit_fragment.xml
+++ b/app/src/main/res/layout/edit_fragment.xml
@@ -97,7 +97,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/id_tv_time" />
-        <!--android:contentDescription="TODO" />-->
+        <!--TODO android:contentDescription="" />-->
 
     <Button
         android:id="@+id/id_btn_save"
