--- a/app/src/main/res/layout/header_fragment.xml
+++ b/app/src/main/res/layout/header_fragment.xml
@@ -1,37 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/id_header_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.fragment.settings.HeaderFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/id_tv_defaults"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="56dp"
+        android:text="Defaults"
+        android:textAlignment="center"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/id_tv_notification"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="56dp"
+        android:text="Notification"
+        android:textAlignment="center"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintEnd_toEndOf="@+id/id_tv_defaults"
+        app:layout_constraintStart_toStartOf="@+id/id_tv_defaults"
+        app:layout_constraintTop_toBottomOf="@+id/id_tv_defaults" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/id_tv_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="56dp"
+        android:text="Refresh"
+        android:textAlignment="center"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        app:layout_constraintEnd_toEndOf="@+id/id_tv_notification"
+        app:layout_constraintStart_toStartOf="@+id/id_tv_notification"
+        app:layout_constraintTop_toBottomOf="@+id/id_tv_notification" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/id_tv_maintenance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="56dp"
+        android:text="Maintenance"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/id_tv_refresh"
+        app:layout_constraintStart_toStartOf="@+id/id_tv_refresh"
+        app:layout_constraintTop_toBottomOf="@+id/id_tv_refresh" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
