--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/id_toolbar"
+<com.google.android.material.appbar.AppBarLayout
+    android:id="@+id/app_bar"
+    android:fitsSystemWindows="true"
+    android:layout_height="?attr/actionBarSize"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="?attr/actionBarSize"
-    android:background="?attr/colorPrimary"
-    android:theme="?attr/actionBarTheme">
+    android:theme="@style/AppTheme.AppBarOverlay"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-</androidx.appcompat.widget.Toolbar>
-<!--<androidx.appcompat.widget.ActionBarContainer-->
-    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--<com.google.android.material.appbar.CollapsingToolbarLayout-->
+    <!--android:id="@+id/toolbar_layout"-->
+    <!--android:fitsSystemWindows="true"-->
     <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--xmlns:app="http://schemas.android.com/apk/res-auto">-->
-    <!--&lt;!&ndash;app:layout_behavior="@string/appbar_scrolling_view_behavior"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:theme="@style/AppTheme.AppBarOverlay">&ndash;&gt;-->
+    <!--android:layout_height="match_parent"-->
+    <!--app:toolbarId="@+id/id_toolbar"-->
+    <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
+    <!--app:contentScrim="?attr/colorPrimary">-->
 
-    <!--<androidx.appcompat.widget.Toolbar-->
-        <!--android:id="@+id/id_toolbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:minHeight="?attr/actionBarSize"-->
-        <!--android:background="?attr/colorPrimary"-->
-        <!--android:theme="?attr/actionBarTheme" />-->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/id_toolbar"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_width="match_parent"
+            app:layout_collapseMode="pin"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
-<!--</androidx.appcompat.widget.ActionBarContainer>-->
+    <!--</com.google.android.material.appbar.CollapsingToolbarLayout>-->
+</com.google.android.material.appbar.AppBarLayout>
