--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/mainFragment_to_editFragment"
             app:destination="@id/id_edit_fragment" />
+        <action
+            android:id="@+id/mainFragment_to_preferencesFragment"
+            app:destination="@id/preferencesFragment" />
     </fragment>
     <fragment
         android:id="@+id/id_edit_fragment"
@@ -22,6 +25,14 @@
         tools:layout="@layout/edit_fragment">
         <action
             android:id="@+id/editFragment_to_mainFragment"
+            app:destination="@id/id_main_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/preferencesFragment"
+        android:name="mcssoft.com.racereminderac.ui.fragment.PreferencesFragment"
+        android:label="PreferencesFragment" >
+        <action
+            android:id="@+id/action_preferencesFragment_to_id_main_fragment"
             app:destination="@id/id_main_fragment" />
     </fragment>
 </navigation>
