--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -8,18 +8,12 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.MainFragment">
 
-    <!--<TextView-->
-        <!--android:id="@+id/textView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="TextView" />-->
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/id_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="?android:attr/actionBarSize"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="?android:attr/actionBarSize"
         app:layout_constraintEnd_toEndOf="parent"
