--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -19,10 +19,10 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/id_toolbar"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            app:layout_collapseMode="pin"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--app:layout_collapseMode="pin"-->
     <!--</com.google.android.material.appbar.CollapsingToolbarLayout>-->
 </com.google.android.material.appbar.AppBarLayout>
