--- a/app/src/main/res/layout/toolbar_base.xml
+++ b/app/src/main/res/layout/toolbar_base.xml
@@ -1,28 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.appbar.AppBarLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/app_bar"
     android:fitsSystemWindows="true"
     android:layout_height="?attr/actionBarSize"
     android:layout_width="match_parent"
-    android:theme="@style/AppTheme.AppBarOverlay"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:theme="@style/AppTheme.AppBarOverlay">
 
-    <!--<com.google.android.material.appbar.CollapsingToolbarLayout-->
-    <!--android:id="@+id/toolbar_layout"-->
-    <!--android:fitsSystemWindows="true"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--app:toolbarId="@+id/id_toolbar"-->
-    <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
-    <!--app:contentScrim="?attr/colorPrimary">-->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/id_toolbar"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/id_toolbar"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--app:layout_collapseMode="pin"-->
-    <!--</com.google.android.material.appbar.CollapsingToolbarLayout>-->
 </com.google.android.material.appbar.AppBarLayout>
