--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -31,6 +31,10 @@
         android:layout_gravity="bottom"
         android:background="?android:attr/windowBackground"
         app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+        app:itemIconTint="@drawable/nav_item_colour_state"
+        app:itemTextColor="@drawable/nav_item_colour_state"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_bottom_nav" />
+    <!--android:background="?android:attr/windowBackground"-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
