--- a/app/src/main/res/layout/notify_and_refresh.xml
+++ b/app/src/main/res/layout/notify_and_refresh.xml
@@ -24,10 +24,11 @@
             android:layout_width="@dimen/menu_item_icon_size"
             android:layout_height="@dimen/menu_item_icon_size"
             android:layout_gravity="center"
-            android:src="@drawable/ic_refresh_24px"/>
+            android:src="@drawable/ic_refresh_24px"
+            android:contentDescription="" />
 
         <FrameLayout
-            android:id="@+id/view_alert_red_circle"
+            android:id="@+id/id_view_refresh_red_circle"
             android:layout_width="14dp"
             android:layout_height="14dp"
             android:layout_gravity="top|end"
@@ -36,12 +37,12 @@
             tools:visibility="visible">
 
             <TextView
-                android:id="@+id/view_alert_count_textview"
+                android:id="@+id/id_view_refresh_period_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textColor="@color/design_default_color_background"
-                android:textSize="10sp"
+                android:textColor="@color/white"
+                android:textSize="12sp"
                 tools:text="3"/>
 
         </FrameLayout>
