--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#00574b</color>
     <color name="colorAccent">#d81b60</color>
     <color name="colorOrange">#ff5722</color>
+    <color name="red">#FF0000</color>
+    <color name="white">#FFFFFF</color>
 
     <!--<color name="myBlue">#7198DD</color>-->
     <!--<color name="myWhite">#FFF</color>-->
