--- a/app/src/main/res/layout/notify_and_refresh.xml
+++ b/app/src/main/res/layout/notify_and_refresh.xml
@@ -7,11 +7,11 @@
     android:layout_height="@dimen/menu_item_size">
 
     <!-- separate view to display ripple/color change when menu item is clicked -->
-    <FrameLayout
-        android:layout_width="@dimen/menu_item_ripple_size"
-        android:layout_height="@dimen/menu_item_ripple_size"
-        android:layout_gravity="center"
-        android:background="?attr/selectableItemBackgroundBorderless"/>
+    <!--<FrameLayout-->
+        <!--android:layout_width="@dimen/menu_item_ripple_size"-->
+        <!--android:layout_height="@dimen/menu_item_ripple_size"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:background="?attr/selectableItemBackgroundBorderless"/>-->
 
     <!-- Create a view larger than material_menu_icon_size so that red dot can be shifted to the right/top -->
     <!-- 32dp is still w/in spec... look at ActionMenItemView.MAX_ICON_SIZE-->
@@ -25,13 +25,13 @@
             android:layout_height="@dimen/menu_item_icon_size"
             android:layout_gravity="center"
             android:src="@drawable/ic_refresh_24px"
-            android:contentDescription="" />
+            tools:ignore="ContentDescription"/>
 
         <FrameLayout
             android:id="@+id/id_view_refresh_red_circle"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:layout_gravity="top|end"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_gravity="start|top"
             android:background="@drawable/circle_red"
             android:visibility="gone"
             tools:visibility="visible">
@@ -43,10 +43,7 @@
                 android:layout_gravity="center"
                 android:textColor="@color/white"
                 android:textSize="12sp"
-                tools:text="3"/>
-
+                tools:text="3" />
         </FrameLayout>
-
     </FrameLayout>
-
 </FrameLayout>
