--- a/app/src/main/res/layout/multisel_fragment.xml
+++ b/app/src/main/res/layout/multisel_fragment.xml
@@ -1,7 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <NumberPicker
+        android:id="@+id/id_np_race_multi_sel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:text="Add"
+        app:layout_constraintBottom_toBottomOf="@+id/id_np_race_multi_sel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/id_np_race_multi_sel"
+        app:layout_constraintTop_toTopOf="@+id/id_np_race_multi_sel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
